# faceR

./: README.md  pyproject.toml  setup.py
src/faceR/facelib/detection/: __init__.py
src/facer/: inference_codeformer.py  inference_colorization.py  inference_inpainting.py
src/facer/basicsr/: train.py
src/facer/basicsr/archs/: __init__.py  arcface_arch.py  arch_util.py  codeformer_arch.py  rrdbnet_arch.py  vgg_arch.py  vqgan_arch.py
src/facer/basicsr/data/: __init__.py  data_util.py  ffhq_blind_dataset.py  ffhq_blind_joint_dataset.py  paired_image_dataset.py
src/facer/basicsr/losses/: __init__.py  losses.py
src/facer/basicsr/metrics/: __init__.py  metric_util.py  psnr_ssim.py
src/facer/basicsr/models/: __init__.py  base_model.py  codeformer_idx_model.py  codeformer_joint_model.py  codeformer_model.py  sr_model.py  vqgan_model.py
src/facer/basicsr/utils/: options.py  realesrgan_utils.py  video_util.py
src/facer/facelib/detection/: __init__.py
src/facer/facelib/detection/retinaface/: retinaface.py
src/facer/facelib/detection/yolov5face/: face_detector.py
src/facer/facelib/detection/yolov5face/models/: common.py  experimental.py  yolo.py
src/facer/facelib/parsing/: __init__.py
src/facer/facelib/utils/: face_restoration_helper.py
src/facer/scripts/: download_pretrained_models.py
src/fr/: inference_codeformer.py  inference_colorization.py
src/fr/scripts/: download_pretrained_models_from_gdrive.py
src/fr/web-demos/hugging_face/: app.py
src/fr/web-demos/replicate/: predict.py
