[tool.poetry]
name = "facer"
version = "0.1"
description = "face restoration for package installation"
authors = ["Your Name <you@example.com>"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
addict = "^2.4.0"
future = "^0.18.3"
lmdb = "^1.4.1"
numpy = "^1.23.5"
opencv-python = "^4.8.0.76"
Pillow = "^10.0.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
scikit-image = "^0.21.0"
scipy = "^1.11.2"
tb-nightly = "^2.15.0a20230902"
torch = "^2.0.1"
torchvision = "0.15.2"
tqdm = "^4.66.1"
yapf = "^0.40.1"
lpips = "^0.1.4"
gdown = "^4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
Homepage = "https://github.com/zain5266/facer"
 
[project.scripts]
inference_codeformer = "facer.inference_codeformer"